jasper/force-app/main/default/objects/Assignment_Log__c/Assignment_Log__c.object-meta.xml
<CustomObject>
    <label>Assignment Log</label>
    <nameField>
        <label>Assignment Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>