jasper/force-app/main/default/objects/Assignment_Log__c/fields/Front_View__c.field-meta.xml
<CustomField>
    <fullName>Front_View__c</fullName>
    <label>Front View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>