jasper/force-app/main/default/objects/Assignment_Log__c/fields/Front_Views__c.field-meta.xml
<CustomField>
    <fullName>Front_Views__c</fullName>
    <label>Front_View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>