jasper/force-app/main/default/objects/Assignment_Log__c/fields/LH_View__c.field-meta.xml
<CustomField>
    <fullName>LH_View__c</fullName>
    <label>LH View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>