jasper/force-app/main/default/objects/Assignment_Log__c/fields/LH_Views__c.field-meta.xml
<CustomField>
    <fullName>LH_Views__c</fullName>
    <label>LH_View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>