jasper/force-app/main/default/objects/Assignment_Log__c/fields/Rear_View__c.field-meta.xml
<CustomField>
    <fullName>Rear_View__c</fullName>
    <label>Rear View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>