jasper/force-app/main/default/objects/Assignment_Log__c/fields/RH_View__c.field-meta.xml
<CustomField>
    <fullName>RH_View__c</fullName>
    <label>RH View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>