jasper/force-app/main/default/objects/Assignment_Log__c/fields/RH_Views__c.field-meta.xml
<CustomField>
    <fullName>RH_Views__c</fullName>
    <label>RH_View</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>