jasper/force-app/main/default/objects/Assignment_Log__c/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ServiceAppointment.Status</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_logs</relationshipName>
    <type>Lookup</type>
</CustomField>