jasper/force-app/main/default/objects/Assignment_Log__c/fields/Spare_Vehicle_Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Spare_Vehicle_Delivery_Time__c</fullName>
    <label>Spare Vehicle Delivery Time</label>
    <type>DateTime</type>
</CustomField>