jasper/force-app/main/default/objects/Assignment_Log__c/fields/Spare_Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Spare_Vehicle_Number__c</fullName>
    <formula>Vehicle__r.VehicleIdentificationNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spare Vehicle Number</label>
    <type>Text</type>
</CustomField>