jasper/force-app/main/default/objects/Assignment_Log__c/fields/Spare_Vehicle_Odo_Readings__c.field-meta.xml
<CustomField>
    <fullName>Spare_Vehicle_Odo_Readings__c</fullName>
    <label>Spare Vehicle Odo Reading(Returned)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>