jasper/force-app/main/default/objects/Assignment_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>WorkOrder.Status</field>
            <operation>notEqual</operation>
            <value>Closed, Canceled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_logs</relationshipName>
    <type>Lookup</type>
</CustomField>