jasper/force-app/main/default/objects/Assignment_Log__c/validationRules/Before_Completed_Service_Appointment.validationRule-meta.xml
<ValidationRule>
    <fullName>Before_Completed_Service_Appointment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Service_Appointment__c)),     
    TEXT(  Service_Appointment__r.Status  ) = &apos;Completed&apos;
)</errorConditionFormula>
    <errorDisplayField>Service_Appointment__c</errorDisplayField>
    <errorMessage>Associated Service Appointment is already Completed.</errorMessage>
</ValidationRule>