jasper/force-app/main/default/objects/Assignment_Log__c/validationRules/Delivery_date_and_Return_date_not_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_date_and_Return_date_not_same</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Spare_Vehicle_Delivery_Time__c )),
NOT(ISBLANK( Spare_Vehicle_Returning_Time__c )),
Spare_Vehicle_Delivery_Time__c = Spare_Vehicle_Returning_Time__c
)</errorConditionFormula>
    <errorDisplayField>Spare_Vehicle_Returning_Time__c</errorDisplayField>
    <errorMessage>The Spare Vehicle Delivery Time and Spare Vehicle Returning Time must not be the same.</errorMessage>
</ValidationRule>