jasper/force-app/main/default/objects/Assignment_Log__c/validationRules/Delivery_date_and_Returning_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_date_and_Returning_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK( Spare_Vehicle_Delivery_Time__c )),
NOT(ISBLANK( Spare_Vehicle_Returning_Time__c )),
Spare_Vehicle_Delivery_Time__c &lt;&gt; Spare_Vehicle_Returning_Time__c,
Spare_Vehicle_Returning_Time__c &lt;= Spare_Vehicle_Delivery_Time__c
)</errorConditionFormula>
    <errorDisplayField>Spare_Vehicle_Returning_Time__c</errorDisplayField>
    <errorMessage>The Spare Vehicle Returning Time should not be earlier than the Spare Vehicle Delivery Time</errorMessage>
</ValidationRule>